# checkers

./: .gitignore  CMakeLists.txt  Makefile  checkers.cpp  checkers.h
